syntax = "proto3";

import "../general.proto";

message UpdateActorUserMeta {
    UUID identifier = 1;
    repeated Meta meta = 2;
}

message Meta {
    int32 identifier = 1;
    string value = 2;
}
