syntax = "proto3";

option java_package = "de.bwueller.environment.protocol";

import "general.proto";

message ConnectUserRequest {
    string user = 1;
    string key = 2; // Unique identifier generated by the processor.
}

message ConnectUserResponse {
    string user = 1;
    Status status = 3;

    enum Status {
        SUC_CONNECTED = 0;
        ERR_ALREADY_CONNECTED = 1;
        ERR_NOT_FOUND = 2;
        ERR_UNKNOWN = 3;
    }
}
